# domjudge-simple-signup

./: .gitignore  README.md  makefile  pyproject.toml
src/: main.py
src/core/: .env.example  config.py
src/ui/: controllers.py  models.py  views.py
